# scriba

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  build.sh  flake.nix  install.sh
.github/workflows/: release.yml
src/: main.rs
