[package]
name = "scriba"
version = "0.1.0"
edition = "2021"
description = "A real-time speech transcription tool for software engineers"
authors = ["Davide Briani <davidebriani@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/davidebriani/scriba"

[dependencies]
vosk = "0.3.1"
zip = "2.2.0"
text2num = "2.6.2"
cpal = "0.15.3"
tokio = { version = "1.0", features = ["full"] }
enigo = "0.2.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["stream"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
dirs = "5.0"
indicatif = "0.17"
dialoguer = "0.11"
regex = "1.10"
once_cell = "1.19"
thiserror = "1.0"
config = "0.14"
toml = "0.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
